--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Spring Security Example</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
 
+<h1>Welcome, <span th:text="${user.username}"></span>, spring boot security page!</h1>
+<p>Name: <span th:text="${user.name}"></span></p>
+<p>Age: <span th:text="${user.age}"></span></p>
+<p>Email: <span th:text="${user.email}"></span></p>
+<p>Password: <span th:text="${user.password}"></span></p>
 
+<a th:href="@{/logout}">LOGOUT</a>
 </body>
 </html>
