--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -6,24 +6,24 @@
 </head>
 <body>
 <h1>Hello, My Boss!</h1>
-<a th:text="${currentUser.email}"></a>
-<br/>
-<a th:href="@{/logout}">Exit</a>
+<a th:text="${currentUser.email}"></a> <!-- Здесь будет отображен email текущего пользователя --> <!--Тег <a> в HTML обозначает "anchor" (якорь). Это слово было выбрано, потому что этот тег используется для создания гиперссылок, которые "якорят" (или связывают) одну часть документа с другой частью или с другим документом.-->
+<br/>                                   <!--Тег <br> в HTML обозначает "break" (разрыв). Он используется для создания разрыва строки в тексте. Это слово отражает основную функцию этого тега — разрывать текущую строку и начинать новую. Объяснение термина "break"-->
+<a th:href="@{/logout}">Exit</a>         <!-- Разрыв строки: Когда вы используете <br>, вы говорите браузеру, что нужно прекратить текущую строку и начать новую. Это полезно, когда вы хотите разделить текст на несколько строк без создания нового абзаца.-->
 
 <br/>
-<form th:method="POST" th:action="@{/admin/findByID}">
-    <label for="id">Enter id for search user:</label>
-    <input type="text" id="id" name="id" placeholder="Input number, please"/>
-    <button type="submit">Search</button>
-</form>
+<form th:method="POST" th:action="@{/admin/findByID}">             <!--th:method="POST" используется метод POST, что означает, что данные будут отправлены в теле запроса.-->  <!--атрибут Thymeleaf, который указывает URL, на который будут отправлены данные формы при ее отправке-->
+    <label for="id">Enter id for search user:</label>               <!--Этот тег создает метку для элемента ввода (input)-->
+    <input type="text" id="id" name="id" placeholder="Input number, please"/>    <!--то, чтов самом окошке для ввода бесцветно видно-->
+    <button type="submit">Search</button>                                         <!--сама кнопка SEarch-->
+</form>                                <!--Этот тег определяет форму, которая будет отправлять данные на сервер.-->
 <br/>
 
-<hr>
+<hr>  <!--<hr> (Horizontal Rule): Этот тег создает горизонтальную линию, которая используется для визуального разделения контента на странице.-->
 
-<div th:if="${userFound != null}">
+<div th:if="${userFound != null}">           <!--Это атрибут Thymeleaf, который указывает, что содержимое этого блока будет отображаться только в том случае, если переменная userFound не равна null. Это условие позволяет динамически показывать или скрывать блок с деталями пользователя в зависимости от того, был ли найден пользователь.-->
     <h2>User Details</h2>
-    <table class="table" border="1">
-        <thead>
+    <table class="table" border="1">         <!--<table> (Table): Этот тег используется для создания таблицы. border="1": Этот атрибут устанавливает границу таблицы. Значение "1" означает, что граница будет видимой и иметь толщину в 1 пиксель.-->
+        <thead>                               <!-- (Table Head): заголовок таблицы-->
         <tr>
             <th>id</th>
             <th>name</th>
@@ -44,20 +44,20 @@
             <td th:utext="${userFound.password}"></td>
             <td th:utext="${userFound.email}"></td>
             <td>
-                        <span th:each="role :${userFound.roles}">
-                            <span th:text="${#strings.substring(role.name, 5)}"></span>
+                        <span th:each="role :${userFound.roles}">   <!--<span> (Span):Этот тег используется для создания строчного контейнера, который не имеет визуального представления сам по себе, но может содержать текст или другие элементы.Внутри <td>, первый <span> использует атрибут th:each, чтобы перебрать коллекцию ролей пользователя (userFound.roles). Для каждой роли создается новый элемент <span>.th:text="${#strings.substring(role.name, 5)}": Этот атрибут Thymeleaf извлекает подстроку из имени роли, начиная с пятого символа. Это может быть полезно для удаления префикса из названия роли.-->
+                            <span th:text="${#strings.substring(role.name, 5)}"></span>    <!--Второй <span>:Этот тег находится внутри первого <span>, и он будет отображать название роли без первых четырех символов.-->
                             </span>
             </td>
-            <td><a th:href="@{/admin/edit(id=${userFound.id})}">edit</a>
-                <a th:href="@{/admin/delete_user(id=${userFound.id})}">delete</a></td>
+            <td><a th:href="@{/admin/edit(id=${userFound.id})}">edit</a>     <!--Создает ссылку на страницу редактирования пользователя с использованием его идентификатора. При нажатии на эту ссылку пользователь будет перенаправлен на страницу редактирования.-->
+                <a th:href="@{/admin/delete_user(id=${userFound.id})}">delete</a></td>  <!--Создает ссылку для удаления пользователя по его идентификатору.-->
         </tr>
         </tbody>
     </table>
-</div>
+</div>   <!--<div> (Division): Этот тег используется для создания контейнера для других элементов. Он не имеет никакого визуального представления сам по себе, но позволяет группировать элементы и применять к ним стили или скрипты.-->
 
 <br/>
 
-<div align="center">
+<div align="center">     <!--используется для создания контейнера с содержимым, выровненным по центру-->
     <h1>Users list</h1>
     <table border="1">
         <tr>
@@ -70,8 +70,8 @@
             <th>roles</th>
             <th>options</th>
         </tr>
-        <tr th:each="lst: ${users}">
-            <td th:utext="${lst.id}"></td>
+        <tr th:each="lst: ${users}">  <!--Переменная lst служит временным контейнером для каждого объекта пользователя во время итерации.-->
+            <td th:utext="${lst.id}"></td>   <!--lst — это просто имя переменной, которое может быть выбрано разработчиком.-->
             <td th:utext="${lst.name}"></td>
             <td th:utext="${lst.age}"></td>
             <td th:utext="${lst.username}"></td>
