--- a/src/main/resources/templates/new_user.html
+++ b/src/main/resources/templates/new_user.html
@@ -40,11 +40,13 @@
         <input type="checkbox" id="role_user" name="selectedRoles" value="ROLE_USER">
         <label for="role_user">User</label>
     </div>
-
-
     <button type="submit">Add user</button>
 
 </form>
 
 </body>
 </html>
+<!--<input type="checkbox">: Это элемент формы, который позволяет пользователю выбрать или снять выбор. В данном случае он представляет роль "Admin".
+id="role_admin": Уникальный идентификатор для этого чекбокса. Он используется для связывания чекбокса с соответствующей меткой.
+name="selectedRoles": Имя группы чекбоксов. Все чекбоксы с одинаковым именем будут отправлены на сервер как массив значений, если они выбраны.
+value="ROLE_ADMIN": Значение, которое будет отправлено на сервер, если этот чекбокс выбран. В данном случае это значение указывает на роль администратора.-->
