RestController create js file

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -345,151 +345,7 @@
 <script src = "https://code.jquery.com/jquery-3.5.1.min.js"></script >
 <script src = "https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script >
 <script src = "https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script >
-<script>
-    $(document).ready(function() {
-        // Открытие модального окна EDIT и заполнение полей
-        $('#userEditDialog').on('show.bs.modal', function (event) {
-            let button = $(event.relatedTarget);
-
-            let modal = $(this);
-            modal.find('#user-id').val(button.data('userid'));
-            modal.find('#user-name').val(button.data('name'));
-            modal.find('#user-username').val(button.data('username'));
-            modal.find('#user-age').val(button.data('age'));
-            modal.find('#user-email').val(button.data('email'));
-            modal.find('#user-password').val(button.data('password'));
-
-            // Установить роли
-            let rolesString = button.data('roles');
-            if (rolesString) {
-                let rolesArray = rolesString.split(',');
-                $('#user-role option').each(function() {
-                    $(this).prop('selected', rolesArray.includes($(this).val()));
-                });
-            }
-        });
-
-        // Сохранение изменений
-        $('#save-user-button').click(function() {
-            let modal = $('#userEditDialog');
-
-            let userId   = modal.find('#user-id').val();
-            let name     = modal.find('#user-name').val();
-            let username = modal.find('#user-username').val();
-            let age      = modal.find('#user-age').val();
-            let email    = modal.find('#user-email').val();
-            let password = modal.find('#user-password').val();
-
-            // Получаем выбранные роли
-            let selectedRoles = [];
-            $('#user-role option:selected').each(function() {
-                selectedRoles.push($(this).val());
-            });
-
-            $.ajax({
-                url: '/admin/edit',
-                type: 'POST',
-                data: {
-                    id: userId,
-                    name: name,
-                    username: username,
-                    age: age,
-                    email: email,
-                    password: password,
-                    selectedRoles: selectedRoles // массив ролей
-                },
-                traditional: true, // чтобы массив корректно сериализовался
-                success: () => {
-                    window.location.href = "/admin";
-                },
-                error: (err) => {
-                    alert('Error saving user');
-                }
-            });
-        });
-    });
-
-    $(document).ready(function() {
-        // Открытие модального окна Delete и заполнение полей
-        $('#userDeleteDialog').on('show.bs.modal', function (event) {
-            let button = $(event.relatedTarget);
-
-            let modal = $(this);
-            modal.find('#delete-user-id').val(button.data('userid'));
-            modal.find('#delete-user-name').val(button.data('name'));
-            modal.find('#delete-user-username').val(button.data('username'));
-            modal.find('#delete-user-age').val(button.data('age'));
-            modal.find('#delete-user-email').val(button.data('email'));
-
-            // Установить роли
-            let rolesString = button.data('roles');
-            if (rolesString) {
-                let rolesArray = rolesString.split(',');
-                $('#delete-user-role option').each(function() {
-                    $(this).prop('selected', rolesArray.includes($(this).val()));
-                });
-            }
-        });
-
-        // Подтверждение удаления
-        $('#confirm-delete-button').click(function() {
-            let userId = $('#delete-user-id').val();
-
-            $.ajax({
-                url: '/admin/delete_user',
-                type: 'GET',
-                data: {id: userId},
-                success: () => {
-                    window.location.href = "/admin";
-                },
-                error: () => {
-                    alert('Error deleting user');
-                }
-            });
-        });
-    });
-</script>
-<script>  //add new user
-document.addEventListener('DOMContentLoaded', () => {
-    const form = document.getElementById('userForm');
-
-    form.addEventListener('submit', function(e) {
-        e.preventDefault(); // отменяем стандартную отправку формы
-
-        // собираем данные из полей
-        const data = {
-            name: document.getElementById('name').value,
-            username: document.getElementById('username').value,
-            age: parseInt(document.getElementById('age').value),
-            email: document.getElementById('email').value,
-            password: document.getElementById('password').value,
-            selectedRoles: [document.getElementById('role').value]
-        };
-
-        fetch('/admin/users', {
-            method: 'POST',
-            headers: {
-                'Content-Type': 'application/x-www-form-urlencoded'
-            },
-            body: new URLSearchParams(data)
-        })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error('Ошибка при добавлении пользователя');
-                }
-                return response.text();
-            })
-            .then(msg => {
-                alert(msg); // сообщение об успехе
-                window.location.href = "/admin";
-            })
-            .catch(error => {
-                alert(error.message);
-            });
-    });
-
-});
-</script>
+<script src="/js/scripts.js"></script>
 </body >
 </html >
 
